--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Бункер</title>
-    <!-- <link rel="stylesheet" href="/scr/css/.css" /> -->
-    <link rel="stylesheet" href="/scr/css/style.css" />
+    <link rel="stylesheet" href="./scr/css/style.css" />
 
-    <script src="/scr/js/auth.js" defer></script>
-    <script src="/scr/js/dark-theame.js" defer></script>
+    <script src="./scr/js/auth.js" defer></script>
+    <script src="./scr/js/dark-theame.js" defer></script>
 </head>
 
 <body>
